2004-07-17  Andrew Cagney  <cagney@gnu.org>

	* hppa-linux-nat.c: Do not include <string.h>.
	(supply_fpregset): Remove "register" attribute.

	* solib-frv.c (fetch_loadmap): Use xfree, not free.

2004-07-17  Mark Kettenis  <kettenis@gnu.org>

	* configure.in: Define _MSE_INT_H on Solaris 9 too.
	* configure, config.in: Regenerated.

	* vaxbsd-nat.c: Include <sys/types.h>, <machine/pcb.h> and
	"bsd-kvm.h".
	(vaxbsd_supply_pcb): New function.
	(_initialize_vaxbsd_nat): New prototype and function.
	* config/vax/nbsdaout.mh (NATDEPFILES): Add bsd-kvm.o, solib.o and
	solib-sunos.o.
	(LOADLIBES): New variable.
	* config/vax/nbsdelf.mh (NATDEPFILES): Add bsd-kvm.o.
	(LOADLIBES): New variable.
	* config/vax/obsd.mh (NATDEPFILES): Add bsd-kvm.o.
	(LOADLIBES): New variable.
	* Makefile.in (vaxbsd-nat.o): Update dependencies.

2004-07-16  Andrew Cagney  <cagney@gnu.org>

	* defs.h (event_loop_p): Replace variable declaration with macro,
	always 1.
	* main.c (captured_main): Delete options "-async" and "-noasync".
	(event_loop_p): Delete variable.
	* NEWS: Mention that "-async" and "-noasync" were removed.

2004-07-16  Andrew Cagney  <cagney@gnu.org>

	* remote-m32r-sdi.c: Re-indent.

2004-07-16  Jim Blandy  <jimb@redhat.com>

	* ppc-tdep.h (ppc_spr_asr): Add missing OEA SPR.
        (ppc_spr_mi_dbcam, ppc_spr_mi_dbram0, ppc_spr_mi_dbram1)
	(ppc_spr_md_cam, ppc_spr_md_ram0, ppc_spr_md_ram1): Add
	missing MPC823 SPRs.
	(ppc_spr_m_twb): Renamed from ppc_spr_md_twb; the old name was
	incorrect.  (This was corrected in GDB's register name tables on
	2004-07-14.)

	* rs6000-tdep.c (registers_602): Correct register name: "esassr"
	should be "esasrr" ("ESA Save and Restore Register").

2004-07-16  Andrew Cagney  <cagney@gnu.org>

	* infrun.c (insert_step_resume_breakpoint): Delete gdb_assert
	calls, no longer applicable.  Update comments and rename parameter
	"step_frame" to "return_frame".

2004-07-16  Andrew Cagney  <cagney@gnu.org>

	* frame.c (fprint_field): New function.